{
    "name": "InventoryActions",
    "maps": [
        {
            "name": "HotbarActionMap",
            "id": "7da9d64d-dc55-4925-ab46-b8e1f4c308bc",
            "actions": [
                {
                    "name": "SelectSlot1",
                    "type": "Button",
                    "id": "01b84267-0f84-4045-90ed-192f2f99c2fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot2",
                    "type": "Button",
                    "id": "a0cdc755-13ee-4cef-88f2-ccf7abc748ca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot3",
                    "type": "Button",
                    "id": "7fb60a54-81a9-4b98-aedc-115405afbff1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot4",
                    "type": "Button",
                    "id": "cc09175e-435c-4150-9838-20c579b20d45",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot5",
                    "type": "Button",
                    "id": "6220b6b8-7ad8-4b33-82f3-c777f2abba7e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot6",
                    "type": "Button",
                    "id": "58f7575c-0c94-4c49-931b-bf36896996a2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot7",
                    "type": "Button",
                    "id": "f635d5ad-8415-4bb2-b12c-9ee9d7d2ca1d",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SelectSlot8",
                    "type": "Button",
                    "id": "cf17218d-8c33-4100-8a33-95f48c8c53d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "InventoryClick",
                    "type": "Button",
                    "id": "b6788f13-c459-44de-8259-e2ba93bc0a4f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Split",
                    "type": "Button",
                    "id": "74cdcd4c-285a-4fc0-a376-e4a1e05611c0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c1d68ab5-92de-430d-b5b3-6296d64cddc1",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "274d192c-bb42-47af-a63c-4bfbadfeb2eb",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "068b53fc-1454-4d93-9a3c-09969bf03d4a",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f50c7ead-6110-4f2e-a5ba-a836f2141460",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acd33049-14c0-4357-bf05-cf4fa27b2e54",
                    "path": "<Keyboard>/5",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot5",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "542efcb2-e319-4dd4-a509-4fefc629114e",
                    "path": "<Keyboard>/6",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot6",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6557837-056f-4061-a73e-e25b5e154bff",
                    "path": "<Keyboard>/7",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot7",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "67450aa5-fcde-4d93-92cb-6b355ed31561",
                    "path": "<Keyboard>/8",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectSlot8",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f79f4d9d-fb4f-4e3d-bf69-5e3c1fb73642",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44bbdf67-6560-4622-ad10-a26d8769d6b8",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Split",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}